# ai-maestro-webdesign

./: .gitignore  .gitleaksignore  .gitmodules  .jscpd.json  .markdownlint-cli2.jsonc  .markdownlint.json  .mega-linter.yml  ACKNOWLEDGMENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ai-maestro-webdesign.agent.toml  cliff.toml  pyproject.toml
.claude-plugin/: plugin.json
.githooks/: pre-push
.github/workflows/: ci.yml  cross-refs.yml  notify-marketplace.yml  release.yml
agents/: ai-maestro-webdesign-main-agent.md  ai-maestro-webdesigner-main-agent.md  amw-accessibility-auditor-agent.md  amw-asset-generator-agent.md  amw-brand-researcher-agent.md  amw-browser-tester-agent.md  amw-component-library-architect-agent.md  amw-design-contract-validator-agent.md  amw-design-md-auditor-agent.md  amw-design-md-author-agent.md  amw-design-md-extractor-agent.md  amw-design-resume-agent.md  amw-diagram-producer-agent.md  amw-email-designer-agent.md  amw-form-designer-agent.md  amw-infographic-builder-agent.md  amw-legal-expert-agent.md  amw-motion-designer-agent.md  amw-multilanguage-copywriter-agent.md  amw-seo-strategist-agent.md  amw-slop-verifier-agent.md  amw-sound-designer-agent.md  amw-user-research-analyst-agent.md  amw-video-producer-agent.md  amw-wireframe-builder-agent.md
commands/: amw-ascii-to-html.md  amw-ascii-to-svg.md  amw-compare-diagrams.md  amw-convert-any-diagram-format.md  amw-create-diagram-from-webpage.md  amw-create-excalidraw-like-diagram-png.md  amw-create-or-modify-ascii-diagram.md  amw-create-or-modify-html-diagram.md  amw-create-or-modify-mermaid-diagram.md  amw-create-or-modify-svg-diagram.md  amw-create-webpage-from-diagram.md  amw-design-md-audit.md  amw-design-md-convert.md  amw-design-md-create.md  amw-design-md-diff.md  amw-design-md-emit-companions.md  amw-design-md-from-codebase.md  amw-design-md-from-tailwind.md  amw-design-md-from-url.md  amw-design-md-lint.md  amw-doctor.md  amw-eval.md  amw-extract-style.md  amw-init.md  amw-modify-diagram-of-webpage.md  amw-modify-webpage-from-diagram.md  amw-preview.md  amw-sketch.md  amw-validate-any-diagram-format.md
design/requirements/: PRRD.md
design/tasks/: TRDD-18787976-planning-proposals.json  TRDD-20260525_184846+0200-6d8ffed6-batch9-integration.md  TRDD-20260531_221948+0200-e4d97761-gsap-hyperframes-license-decision.md  TRDD-20260611_143020+0200-18787976-toc-contract-fullfit.md  TRDD-20260709_114141+0200-MHJL3HY2-role-plugin-conformance.md  TRDD-20260713_093920+0200-K3N7QW82-main-agent-governance-section.md
git-hooks/: pre-push
hooks/: hooks.json
rules/: memory-protocol.md
scripts/: cpv_network_resilience.py  publish.py  set_marketplace_pat.py
skills/amw-ascii-creator/: SKILL.md
skills/amw-ascii-diagrams-reference/: SKILL.md
skills/amw-ascii-pixel-art/: SKILL.md
skills/amw-ascii-sketch/: SKILL.md
skills/amw-ascii-to-html/: SKILL.md
skills/amw-ascii-to-svg/: SKILL.md
skills/amw-ascii-validator/: SKILL.md
skills/amw-box-diagram/: SKILL.md
skills/amw-design-battle/: SKILL.md
skills/amw-design-drift-audit/: SKILL.md
skills/amw-design-extract/: SKILL.md
skills/amw-design-grade/: SKILL.md
skills/amw-design-md/: SKILL.md  ai-slop-avoid.md
skills/amw-design-md-audit/: SKILL.md
skills/amw-design-md-author/: SKILL.md
skills/amw-design-md-convert/: SKILL.md
skills/amw-design-md-extract/: SKILL.md
skills/amw-design-md-spec/: SKILL.md
skills/amw-design-principles/: SKILL.md  ai-slop-avoid.md  color-system.md  design-heuristics.md  question-templates.md  spacing-rhythm.md  (+1 more)
tests/: README.md  test_ai_slop_check_content.py  test_amw_design_contract_validate.py  test_amw_design_md_showcase.py  test_amw_design_md_validate.py  test_amw_dtcg_export.py  test_amw_figma_tokens_roundtrip.py  test_ascii_parse.py  test_ascii_render.py  test_bin_delegation_paths.py  test_bin_smoke.py  test_design_contract_resume.py  test_dev_browser_wrapper.py  test_diagram_ir.py  test_memory_skills.py  test_page_to_ascii_layout.py  test_screenshot_compare.py  test_validate_ascii.py  test_validate_cross_refs.py  test_verify_parity.py
(+908 files in other folders)
