[project]
name = "ai-maestro-webdesign"
version = "0.1.0"
description = "Consolidated web-design plugin: design judgment (Claude Design principles), ASCII sketch/parse, diagrams, infographics, style extraction, and preview."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Emasoft", email = "713559+Emasoft@users.noreply.github.com" }
]
requires-python = ">=3.12"

# CI runs `uv sync --extra dev` then `uv run pytest tests/ -v` (see
# .github/workflows/ci.yml). Without this extra that sync fails with
# "Extra `dev` is not defined". Pin pytest exactly for reproducible runs.
[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]

[project.urls]
Homepage = "https://github.com/Emasoft/ai-maestro-plugins"
Repository = "https://github.com/Emasoft/ai-maestro-plugins"
