[project]
name = "ai-maestro-webdesign"
version = "0.1.4"
description = "Consolidated web-design plugin: design judgment (Claude Design principles), ASCII sketch/parse, diagrams, infographics, style extraction, and preview."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Emasoft", email = "713559+Emasoft@users.noreply.github.com" }
]
requires-python = ">=3.12"

# CI runs `uv sync --extra dev` then `uv run pytest tests/ -v` (see
# .github/workflows/ci.yml). Without this extra that sync fails with
# "Extra `dev` is not defined". Pin exactly for reproducible runs.
#
# pyyaml is a test dependency: seven shipped bin scripts import yaml
# (amw-design-md-{validate,contrast,emit-companions,showcase}.py,
# amw-figma-tokens-{import,export}.py, amw-dtcg-export.py) and their tests
# invoke those scripts, so the suite needs PyYAML to run them. At end-user
# runtime those scripts fail-fast with an install hint if PyYAML is absent.
#
# The batch9 screenshot-parity verification harness (bin/amw-verify-parity.sh,
# bin/amw-screenshot-compare.sh) depends on two EXTERNAL, non-Python tools that
# are NOT installed by `uv sync` and are NOT present in CI:
#   - fcvvdp  — perceptual image-diff (halidecx/fcvvdp, Apache-2.0); build once
#               via Zig 0.16.x into gitignored libs_dev/fcvvdp/ (or point
#               AMW_FCVVDP_BIN at a prebuilt binary). See tests/README.md.
#   - dev-browser + Chromium — page rendering; installed by /amw-init.
# Tests that need them self-skip when absent, so the fast CI gate stays green.
[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pyyaml==6.0.3",
    "ruff==0.15.20",
    "mypy==2.2.0",
]

[project.urls]
Homepage = "https://github.com/Emasoft/ai-maestro-webdesign"
Repository = "https://github.com/Emasoft/ai-maestro-webdesign"
